content/vault/v1.9.x/content/docs/secrets/databases/oracle.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Vault and the Vault logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/web-unified-docs/blob/-/LICENSE

layout: docs
page_title: Oracle - Database - Secrets Engines
description: |-
  Oracle is one of the supported plugins for the database secrets engine. This
  plugin generates database credentials dynamically based on configured roles
  for the Oracle database.
---

# Oracle Database Secrets Engine

This secrets engine is a part of the Database Secrets Engine. If you have not read the
[Database Backend](/vault/docs/secrets/databases) page, please do so now as it explains how to set up the database backend and
gives an overview of how the engine functions.

Oracle is one of the supported plugins for the database secrets engine. It is capable of dynamically generating
credentials based on configured roles for Oracle databases. It also supports [Static Roles](/vault/docs/secrets/databases#static-roles).

~> The Oracle database plugin is not bundled in the core Vault code tree and can be
found at its own git repository here:
[hashicorp/vault-plugin-database-oracle](https://github.com/hashicorp/vault-plugin-database-oracle)

## Capabilities

| Plugin Name                                                          | Root Credential Rotation | Dynamic Roles | Static Roles | Username Customization |
| -------------------------------------------------------------------- | ------------------------ | ------------- | ------------ | ---------------------- |
| Customizable (see: [Custom Plugins](/vault/docs/secrets/databases/custom)) | Yes                      | Yes           | Yes          | Yes (1.7+)             |

## Setup

The Oracle Database Plugin does not live in the core Vault code tree and can be found
at its own git repository here: [hashicorp/vault-plugin-database-oracle](https://github.com/hashicorp/vault-plugin-database-oracle)

For linux/amd64, pre-built binaries can be found at [the releases page](https://releases.hashicorp.com/vault-plugin-database-oracle)

Before running the plugin you will need to have the the Oracle Instant Client
library installed. These can be downloaded from Oracle. The libraries will need to
be placed in the default library search path or defined in the ld.so.conf configuration files.

If you are running Vault with [mlock enabled](/vault/docs/configuration#disable_mlock),
you will need to enable ipc_lock capabilities for the plugin binary.

1.  Enable the database secrets engine if it is not already enabled:

    ```shell
    $ vault secrets enable database
    Success! Enabled the database secrets engine at: database/
    ```

    By default, the secrets engine will enable at the name of the engine. To
    enable the secrets engine at a different path, use the `-path` argument.

1.  Download and register the plugin:

    ```shell
    $ vault write sys/plugins/catalog/database/vault-plugin-database-oracle \
        sha256="..." \
        command=vault-plugin-database-oracle
    ```

1.  Configure Vault with the proper plugin and connection information:

    ```shell
    $ vault write database/config/my-oracle-database \
        plugin_name=vault-plugin-database-oracle \
        connection_url="{{username}}/{{password}}@localhost:1521/OraDoc.localhost" \
        allowed_roles="my-role" \
        username="VAULT_SUPER_USER" \
        password="myreallysecurepassword"
    ```

If Oracle uses SSL, see the [connecting using SSL](/vault/docs/secrets/databases/oracle#connect-using-ssl) example.

If the version of Oracle you are using has a container database, you will need to connect to one of the
pluggable databases rather than the container database in the `connection_url` field.

1. It is highly recommended that you immediately rotate the "root" user's password, see
   [Rotate Root Credentials](/vault/api-docs/secret/databases#rotate-root-credentials) for more details.
   This will ensure that only Vault is able to access the "root" user that Vault uses to
   manipulate dynamic & static credentials.

   !> **Use caution:** the root user's password will not be accessible once rotated so it is highly
   recommended that you create a user for Vault to utilize rather than using the actual root user.

1. Configure a role that maps a name in Vault to an SQL statement to execute to
   create the database credential:

   ```shell
   $ vault write database/roles/my-role \
       db_name=my-oracle-database \
       creation_statements='CREATE USER {{username}} IDENTIFIED BY "{{password}}"; GRANT CONNECT TO {{username}}; GRANT CREATE SESSION TO {{username}};' \
       default_ttl="1h" \
       max_ttl="24h"
   Success! Data written to: database/roles/my-role
   ```

   Note: The `creation_statements` may be specified in a file and interpreted by the Vault CLI using the `@` symbol:

   ```shell
   $ vault write database/roles/my-role \
       creation_statements=@creation_statements.sql \
       ...
   ```

   See the [Commands](/vault/docs/commands#files) docs for more details.

### Connect Using SSL

~> **Note**: The wallets used when connecting via SSL should be available on every Vault
server when using high availability clusters.

If the Oracle server Vault is trying to connect to uses an SSL listener, the database
plugin will require additional configuration using the `connection_url` parameter:

```shell
vault write database/config/oracle \
  plugin_name=vault-plugin-database-oracle \
  connection_url='{{ username }}/{{ password }}@(DESCRIPTION=(ADDRESS=(PROTOCOL=tcps)(HOST=<host>)(PORT=<port>))(CONNECT_DATA=(SERVICE_NAME=<service_name>))(SECURITY=(SSL_SERVER_CERT_DN="<cert_dn>")(MY_WALLET_DIRECTORY=<path_to_wallet>)))' \
  allowed_roles="my-role" \
  username="admin" \
  password="password"
```

For example, the SSL server certificate distinguished name and path to the Oracle Wallet
to use for connection and verification could be configured using:

```shell
vault write database/config/oracle \
  plugin_name=vault-plugin-database-oracle \
  connection_url='{{ username }}/{{ password }}@(DESCRIPTION=(ADDRESS=(PROTOCOL=tcps)(HOST=hashicorp.com)(PORT=1523))(CONNECT_DATA=(SERVICE_NAME=ORCL))(SECURITY=(SSL_SERVER_CERT_DN="CN=hashicorp.com,OU=TestCA,O=HashiCorp=com")(MY_WALLET_DIRECTORY=/etc/oracle/wallets)))' \
  allowed_roles="my-role" \
  username="admin" \
  password="password"
```

### Using TNS Names

~> **Note**: The `tnsnames.ora` file and environment variable used when connecting via SSL should
be available on every Vault server when using high availability clusters.

Vault can optionally use TNS Names in the connection string when connecting to Oracle databases using a `tnsnames.ora` file. An example
of a `tnsnames.ora` file may look like the following:

```shell
AWSEAST=
(DESCRIPTION =
  (ADDRESS = (PROTOCOL = TCPS)(HOST = hashicorp.us-east-1.rds.amazonaws.com)(PORT = 1523))
  (CONNECT_DATA =
    (SERVER = DEDICATED)
    (SID = ORCL)
  )
  (SECURITY =
      (SSL_SERVER_CERT_DN = "CN=hashicorp.rds.amazonaws.com/OU=RDS/O=Amazon.com/L=Seattle/ST=Washington/C=US")
      (MY_WALLET_DIRECTORY = /etc/oracle/wallet/east)
  )
)

AWSWEST=
(DESCRIPTION =
  (ADDRESS = (PROTOCOL = TCPS)(HOST = hashicorp.us-west-1.rds.amazonaws.com)(PORT = 1523))
  (CONNECT_DATA =
    (SERVER = DEDICATED)
    (SID = ORCL)
  )
  (SECURITY =
      (SSL_SERVER_CERT_DN = "CN=hashicorp.rds.amazonaws.com/OU=RDS/O=Amazon.com/L=Seattle/ST=Washington/C=US")
      (MY_WALLET_DIRECTORY = /etc/oracle/wallet/west)
  )
)
```

To configure Vault to use TNS names, set the following environment variable on the Vault server:

```shell
TNS_ADMIN=/path/to/tnsnames/directory
```

~> **Note**: If Vault returns a "could not open file" error, double check that
the `TNS_ADMIN` environment variable is available to the Vault server.

Finally, use the alias in the `connection_url` parameter on the database configuration:

```
vault write database/config/oracle-east \
    plugin_name=vault-plugin-database-oracle \
    connection_url="{{ username }}/{{ password }}@AWSEAST" \
    allowed_roles="my-role" \
    username="VAULT_SUPER_USER" \
    password="myreallysecurepassword"

vault write database/config/oracle-west \
    plugin_name=vault-plugin-database-oracle \
    connection_url="{{ username }}/{{ password }}@AWSWEST" \
    allowed_roles="my-role" \
    username="VAULT_SUPER_USER" \
    password="myreallysecurepassword"
```

## Usage

### Dynamic Credentials

After the secrets engine is configured and a user/machine has a Vault token with
the proper permission, it can generate credentials.

1.  Generate a new credential by reading from the `/creds` endpoint with the name
    of the role:

    ```text
    $ vault read database/creds/my-role
    Key                Value
    ---                -----
    lease_id           database/creds/my-role/2f6a614c-4aa2-7b19-24b9-ad944a8d4de6
    lease_duration     1h
    lease_renewable    true
    password           yRUSyd-vPYDg5NkU9kDg
    username           V_VAULTUSE_MY_ROLE_SJJUK3Q8W3BKAYAN8S62_1602543009
    ```

## API

The full list of configurable options can be seen in the [Oracle database plugin
API](/vault/api-docs/secret/databases/oracle) page.

For more information on the database secrets engine's HTTP API please see the
[Database secrets engine API](/vault/api-docs/secret/databases) page.
